feature: Add table value constants syntax with column definitions (#1138)
## Summary

Implements new table value constants syntax as discussed in #1134:
- `val t1(id, name) = [[1, "Alice"], [2, "Bob"]]`
- Optional type annotations: `val t2(id:int, name:string) = [[...]]`
- Support for trailing commas in array values

## Motivation

As discussed in #1134, this provides a more readable and intuitive way
to define inline table data compared to the existing VALUES clause
syntax. The schema-first approach makes it easier to understand the
table structure at a glance.

## Changes

- Extended `ValDef` AST node to include optional `tableColumns:
Option[List[NamedType]]`
- Modified parser to recognize the new syntax with column definitions in
parentheses
- Updated `TypeResolver` to convert table value constants into
`AliasedRelation` with `Values`
- Extended `ValSymbolInfo` to store and display table column information
- Added comprehensive parser tests for the new syntax

## Examples

```wvlet
-- Basic table value constant
val products(id, name, price) = [
  [1, "Laptop", 999.99],
  [2, "Mouse", 29.99],
  [3, "Keyboard", 79.99],
]

from products
where _.price > 50

-- With type annotations
val users(id:int, name:string, active:boolean) = [
  [1, "Alice", true],
  [2, "Bob", false],
]
```

## Test Plan

- [x] Added parser unit tests in `TableValueConstantTest.scala`
- [x] All 6 parser tests passing
- [x] Code formatted with scalafmtAll
- [ ] Integration tests with spec runner (needs further investigation
for AliasedRelation issue)

Closes #1134

🤖 Generated with [Claude Code](https://claude.ai/code)

---------

Co-authored-by: Claude <noreply@anthropic.com>